# symphony-python-public

./: .gitignore  README.md  WORKFLOW.example.md  WORKFLOW.jira-project.jira.md  WORKFLOW.jira.example.md  WORKFLOW.linear.projectzero.md  pyproject.toml
docs/: linear-projectzero-issue-template.md  linear-symphony-execution-workflow.md
symphony/: __init__.py  agent.py  cli.py  codex_client.py  config.py  errors.py  http_server.py  jira.py  linear.py  logging_utils.py  models.py  orchestrator.py  runtime.py  service.py  template.py  tracker.py  tracker_factory.py  workflow.py  workspace.py
symphony/workflows/: WORKFLOW.jira-project.dashboard-only.md
tests/: conftest.py  test_codex_client.py  test_jira.py  test_linear.py  test_orchestrator.py  test_workflow_config_template.py  test_workspace.py
