[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony-python"
version = "0.1.0"
description = "A Python implementation of the Symphony coding-agent orchestration service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.11",
  "httpx>=0.28",
  "jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
symphony = "symphony.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["symphony*"]

[tool.setuptools.package-data]
symphony = ["workflows/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "asyncio: run an async test with the local pytest hook",
]
